<?xml version="1.0" encoding="utf-8"?>
<TcPlcObject Version="1.1.0.1" ProductVersion="3.1.4024.3">
  <DUT Name="CamIn_CMD_typ" Id="{f64b2959-9ded-0018-1ee6-bb79d0936808}">
    <Declaration><![CDATA[TYPE CamIn_CMD_typ :
STRUCT
	StartSlave : BOOL ;
	DisengageSlave : BOOL ;
END_STRUCT
END_TYPE
]]></Declaration>
  </DUT>
</TcPlcObject>